Hide menu underline / box shadow effect This is not visible adjacent to the light blue service nav, and is jarring against the darker blue homepage header, plus causes weird page layout issues.

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -127,3 +127,9 @@
   content: url(department-for-education_black.png);
   height: 30px;
 }
+
+.govuk-frontend-supported .gem-c-layout-super-navigation-header__nav-wrapper {
+  &::before {
+    content: none;
+  }
+}
